# python_modern_dev_environment

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  README.md  README.rst  README_DEV.rst  mypy.ini  poetry.toml  pyproject.toml  tox.ini
dev_demo/: __init__.py  __main__.py
dev_demo/math_demo/: __init__.py
docs/: api.rst  conf.py  index.rst  usage.rst
scripts/: 0_pyenv_ubuntu_hook_profile.sh  1_after_pyenv_poetry_install-setup_env.sh
tests/: install_test.py
