[tool.poetry]
name = "dev_demo"
version = "0.1.0"
description = "Modern Python Dev Environment Demo"
authors = ["Brent Stone"]
license = "GPLv2"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
tox = "^3.24.5"
flake8 = "^4.0.1"
pre-commit = "^2.16.0"
mypy = "^0.931"
Sphinx = "^4.4.0"
black = "^21.12b0"
tox-poetry = "^0.4.1"
tox-pyenv = "^1.1.0"
pytest-cov = "^3.0.0"
setup-cfg-fmt = "^1.20.0"
reorder-python-imports = "^2.6.0"
pre-commit-hooks = "^4.1.0"
sphinx-rtd-theme = "^1.0.0"
sphinx-autodoc-typehints = "^1.15.2"
bandit = "^1.7.1"
safety = "^1.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
